[tool.poetry]
name = "bbup"
version = "1.0.6"
description = ""
authors = ["Rehmat Alam <contact@rehmat.works>"]
readme = "README.md"

[tool.poetry.scripts]
bbup = "bbup.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.4.0"}
b2sdk = {version = "^1.14.0"}
colorama = {version = "^0.4.4"}
requests = {version = "^2.27.1"}
validators = {version = "^0.18.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
